maze.lessons.maze.island.IslandMaze.scala.error
Escaper:7: error: variable direction in class AbstractBuggle cannot be accessed in plm.runtime9.Escaper
    if(!murNord() && getDirection() == direction.SOUTH)
                                       ^